# SAS-Award-Finder

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  db.py  main.py  models.py  scheduler.py
app/fetch/: budget.py  engine.py  ratelimit.py
app/migrations/: 001_init.sql  002_watch_state.sql  003_explore.sql
app/providers/: base.py  registry.py
app/providers/sas_direct/: endpoints.py  parser.py  provider.py
app/providers/seats_aero/: __init__.py  endpoints.py  parser.py  provider.py
app/services/: diffing.py  explore.py  nl_search.py  notify.py  search.py  skyteam.py  snapshots.py  trips.py  value.py  watches.py
app/web/: routes.py
app/web/static/: app.css
app/web/templates/: _results.html  alerts.html  base.html  explore.html  index.html  skyteam.html  status.html  watches.html
config/: points_table.yaml
docs/: api-notes.md
tests/: conftest.py  test_config.py  test_diffing.py  test_explore.py  test_nl_search.py  test_notify.py  test_parser.py  test_pruning.py  test_seats_aero.py  test_skyteam.py  test_store.py  test_trips.py  test_value.py  test_watches.py  test_web.py  test_web_skyteam.py
tests/fixtures/: award_finder_all_dests_cph_202612_trimmed.json  award_finder_availability_cph_bos.json  network_cph_outbound.json  seats_aero_search_cph_bos.json  seats_aero_search_live_cph_bkk.json
